Changelog
=========

1.3.0+enfold2 (unreleased)
--------------------------

- Nothing changed yet.


1.3.0+enfold1 (2021-06-24)
--------------------------

- Fix import for Plone 5.2 and fix id and login to correct values
  [enfold-josh]


1.3.0 (2019-10-25)
------------------

- Drop Plone 4.0 and 4.1 support. [jone]
- Add Plone 5 support. [busykoala]


1.2 (2012-06-11)
----------------

- Added option to emulate Plone logins which includes the creation of member
  areas and firing login events. The feature can be enabled by setting the
  `Plone Login Timeout` option.
  [buchi]

1.1 (2012-04-26)
----------------

- Added option to verify the user name given in the request header. If
  enabled, only user names that can be looked up with PAS are authenticated.
  [buchi]

- Added a config page for plugin configuration and removed the ZMI
  properties that were used for configuration previously. With this change the
  user name mapping no longer needs to be calculated with each request.
  [buchi]

- Do user name mapping in the extraction part instead of the authenticate part.
  [buchi]


1.0.1 (2011-12-13)
------------------

- Added option to lowercase AD domain part of login.
  [buchi]

- Added username mapping feature for rewriting the username
  provided by the trusted proxy into a known plone username.
  [jbaumann]

- Improved hostname to IP resolution
  [jbaumann]

- Added tests
  [jbaumann]

- Added option to strip NT and AD domains from login.
  [buchi]


1.0 (2011-02-25)
----------------

- Initial release
  [buchi].