@@ -27,10 +27,12 @@ setup(name='pas.plugins.trustedproxyauth',
       classifiers=[
         'Framework :: Plone',
         'Framework :: Plone :: 5.2',
+        'Framework :: Plone :: 6.0',
         'Programming Language :: Python',
         'Programming Language :: Python :: 3.6',
         'Programming Language :: Python :: 3.7',
         'Programming Language :: Python :: 3.8',
+        'Programming Language :: Python :: 3.10',
         'License :: OSI Approved :: GNU General Public License (GPL)',
         'Development Status :: 5 - Production/Stable',
         'Topic :: Software Development :: Libraries :: Python Modules',
